test/should-fail/jfxc1310Application.fx
/*
 * @subtest jfxc1310Applet
 */

public class jfxc1310Application {
    public attribute content: Component;
} 
